--- a/fay/packages.config
+++ b/fay/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="jQuery" version="1.12.4" targetFramework="net452" />
-  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
+  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net452" />
@@ -15,6 +16,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
 </packages>
